# PoC-Bench-Blockchain

./: .gitignore  README.md
caliper/: bench-config.yaml  network-config.yaml  package-lock.json  package.json  report.html
caliper/benchmarks/scenario/simple/: confidentialWorkload.js  createAsset.js
hyperledger/PoC_Computacao_Confidencial/: .env.example  .gitignore  README.md  SPEC.md  TASKS.md  main.py  pyproject.toml
hyperledger/PoC_Computacao_Confidencial/data/: corpus.jsonl  corpus.sha256
hyperledger/PoC_Computacao_Confidencial/scripts/: collect_env.sh  hash_corpus.sh  run_all.sh  run_matrix.sh  verify_corpus.sh
hyperledger/PoC_Computacao_Confidencial/src/: api_benchmark.py  bench_embed.py  dataset_gen.py
